--- a/package.json
+++ b/package.json
@@ -13,6 +13,12 @@
     "prop-types": "^15.7.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "sass": "^1.32.2"
+    "sass": "^1.32.2",
+    "socket.io-client": "^3.0.5"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.20",
+    "@types/react": "^17.0.0",
+    "typescript": "^4.1.3"
   }
 }
