--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "firebase": "^8.2.6",
     "next": "10.0.5",
     "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-firebase-hooks": "^2.2.0",
     "sass": "^1.32.2",
     "socket.io-client": "^3.0.5"
   },
