--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@types/node": "^14.14.20",
     "@types/react": "^17.0.0",
+    "eslint": "^7.21.0",
     "typescript": "^4.1.3"
   }
 }
